VDDK and SSH split

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
@@ -1,7 +1,7 @@
-[id="Configuring_rhv_conversion_hosts_for_ssh_transformation"]
-= Configuring RHV Conversion Hosts for SSH Transformation
+[id="Additional_configuration_for_ssh_transformation"]
+= Additional Configuration for SSH Transformation
 
-If you are using the SSH transformation mode, configure the RHV conversion hosts to communicate with the VMware hypervisors using public key authentication:
+Configure the RHV conversion hosts to communicate with the VMware hypervisors using public key authentication:
 
 . Enable SSH on all the VMware hypervisors. See link:https://pubs.vmware.com/vsphere-6-5/index.jsp?topic=%2Fcom.vmware.vcli.getstart.doc%2FGUID-C3A44A30-EEA5-4359-A248-D13927A94CCE.html[Enable SSH from the vSphere Web Client] for details.
 
@@ -40,9 +40,11 @@ echo Agent pid 65905;
     SSH_AUTH_SOCK=/tmp/ssh-_Gi2oSn44DHNL_/agent.65904 ssh root@_esx1.example.com_
 ----
 +
-If the connection is successful, the RHV conversion host is correctly configured for SSH transformation. Go to xref:Discovery_and_Assessment[].
+If the connection is successful, the RHV conversion host is correctly configured for SSH transformation.
 
 [NOTE]
 ====
 If you are using SSSD with single sign-on, see xref:SSH_transformation_fails[Troubleshooting] for additional information.
 ====
+
+You can now configure the maximum number of concurrent migrations. This option is only available for SSH transformation.
