--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -55,4 +55,4 @@ RHV hosts authenticated::
 See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[Authenticating Red Hat Virtualization Hosts] in _CloudForms: Managing Providers_.
 
 RHV conversion hosts created and configured::
-See xref:proc_Creating_rhv_conversion_hosts[Creating RHV Conversion Hosts], xref:Configuring_rhv_conversion_hosts_in_CloudForms[Configuring RHV Conversion Hosts in CloudForms], and xref:Configuring_rhv_conversion_hosts_for_ssh_transformation[Configuring RHV Conversion Hosts for SSH Transformation] below.
+See xref:proc_Creating_rhv_conversion_hosts[Creating RHV Conversion Hosts] and xref:Configuring_rhv_conversion_hosts[Configuring RHV Conversion Hosts].
