--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
@@ -1,9 +1,11 @@
-[id="Configuring_rhv_conversion_hosts_in_CloudForms"]
-= Configuring RHV Conversion Hosts in CloudForms
+[id="Configuring_rhv_conversion_hosts"]
+= Configuring RHV Conversion Hosts
 
-Configure the RHV conversion hosts in CloudForms:
+== Configuring RHV Conversion Hosts for VDDK and SSH Transformation
 
-. Go to menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
+Tag and validate all RHV conversion hosts:
+
+. In CloudForms, go to menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
 . Click the `Policy` drop-down button and select `Edit Tags`.
 . Select `V2V - Transformation Host` from the tag drop-down list and `t` as the assigned value.
 . Select `V2V - Transformation Method` from the tag drop-down list and either `VDDK` or `SSH` as the assigned value. See xref:datapath_transformation_options_vddk_ssh[Datapath Transformation Options: VDDK vs. SSH] for more information.
@@ -21,4 +23,6 @@ VDDK is approximately twice as fast as SSH.
 .Conversion Host Properties
 image:Conversion_host_properties.png[]
 
-If you are using `SSH` transformation, you must perform the additional configuration in    xref:Configuring_rhv_conversion_hosts_for_ssh_transformation[].
+If you are using `SSH` transformation, go to xref:Additional_configuration_for_ssh_transformation[].
+
+include::proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc[leveloffset=+1]
