--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
@@ -1,4 +1,5 @@
 [id="Configuring_the_maximum_number_of_concurrent_migrations"]
+[discrete]
 = Configuring the Maximum Number of Concurrent Migrations
 
 The default limit for concurrent migrations is 10 for a conversion host and 10 for a provider. You can change this value by setting the `Max Transformation Runners` attribute for the conversion host or for the provider, or both. The limit that is set for the provider has priority over the limit set for the conversion host. For example, if you set the number of concurrent migrations to 20 at the provider level, while having 3 conversion hosts, the number of concurrent migrations is limited to 20 because the provider's setting overrides the conversion hosts' setting.
