--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
@@ -11,10 +11,9 @@ The number of virtual machines that you can migrate at the same time depends on 
 ====
 
 [[datapath_transformation_options_vddk_ssh]]
-[discrete]
 == Datapath Transformation Options: VDDK or SSH
 
-You must select the best datapath transformation option for your environment, either VDDK or SSH:
+Select the best datapath transformation option for your environment, either VDDK or SSH:
 
 VDDK::
 * Best performance and, therefore, recommended
@@ -28,12 +27,11 @@ SSH::
 * Requires enabling SSH access on ESX hosts
 * Slower than VDDK
 
-[discrete]
-== Procedure
+== Creating RHV Conversion Hosts for VDDK Transformation
 
 Create one or more RHV conversion hosts:
 
-. Log in to the link:https://www.vmware.com/support/developer/vddk/[VMware VDDK Documentation] site and download the latest VDDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`) to your local machine. The VDDK package is required for creating the conversion host, regardless of the transformation method.
+. Log in to the link:https://www.vmware.com/support/developer/vddk/[VMware VDDK Documentation] site and download the latest VDDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`) to your local machine.
 
 . Using SCP, copy the VDDK package to `/var/www/html` on the Manager machine.
 
@@ -53,7 +51,6 @@ all:
     _host1.example.com_:
     _host2.example.com_:
   vars:
-    ansible_ssh_private_key_file: /etc/pki/ovirt-engine/keys/engine_id_rsa
     v2v_vddk_package_name: VMware-vix-disklib-_version_.x86_64.tar.gz
     v2v_vddk_package_url: http://_Manager_FQDN_/VMware-vix-disklib-_version_.x86_64.tar.gz
 ----
@@ -83,6 +80,50 @@ After creating the RHV conversion hosts, you must configure them in CloudForms.
 ====
 If you upgrade your RHV environment, you must run the `conversion_host_enable` playbook again, with the option `-e v2v_vddk_override=true`, to update the IMS packages.
 ====
+
+== Creating RHV Conversion Hosts for SSH Transformation
+
+Create one or more RHV conversion hosts:
+
+. Go to the conversion hosts directory on the Manager machine:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# cd /usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/
+----
+
+. Create a `conversion_hosts_inventory.yml` inventory file with the following variables:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+all:
+  hosts:
+    _host1.example.com_:
+    _host2.example.com_:
+  vars:
+    ansible_ssh_private_key_file: /etc/pki/ovirt-engine/keys/engine_id_rsa
+----
+
+. Enable the conversion hosts:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# ansible-playbook -i conversion_hosts_inventory.yml conversion_host_enable.yml
+----
++
+[NOTE]
+====
+The Ansible role checks for the presence of the RHV guest tools ISO image in the ISO storage domain. This image is used to migrate Windows virtual machines.
+====
+
+. Verify that the conversion hosts are enabled:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# ansible-playbook -i conversion_hosts_inventory.yml conversion_host_check.yml
+----
+
+After creating the RHV conversion hosts, you must configure them.
 
 [discrete]
 == Additional resources
