Few edits based on SME feedback.

--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -121,13 +121,13 @@ $ exit
 # firewall-cmd --add-port=5432/tcp --permanent
 ----
 +
-. Enable external md5 authentication. Change the authentication method from `ident` to `md5` in the following line in `/var/lib/pgsql/data/pg_hba.conf`:
+. Enable external md5 authentication. Modify the following line in `/var/lib/pgsql/data/pg_hba.conf` as shown below:
 +
 ----
 host    all      all    0.0.0.0/0     md5
 ----
 +
-. Enable PostgreSQL to listen for remote connections. Update the `listen_addresses` line in `/var/lib/pgsql/data/postgresql.conf`:
+. Enable PostgreSQL to listen for remote connections. Ensure the `listen_addresses` line in `/var/lib/pgsql/data/postgresql.conf` is as shown below:
 +
 ----
 listen_addresses  =  '*'
