--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_cloudforms.adoc
@@ -1,20 +1,12 @@
-[id="Configuring_rhv_conversion_hosts"]
-= Configuring RHV Conversion Hosts
+[id="Configuring_rhv_conversion_hosts_in_cloudforms"]
+= Configuring RHV Conversion Hosts in CloudForms
 
-== Configuring RHV Conversion Hosts for VDDK and SSH Transformation
+Configure the RHV conversion hosts in CloudForms:
 
-Tag and validate all RHV conversion hosts:
-
-. In CloudForms, go to menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
+. Go to menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
 . Click the `Policy` drop-down button and select `Edit Tags`.
 . Select `V2V - Transformation Host` from the tag drop-down list and `t` as the assigned value.
 . Select `V2V - Transformation Method` from the tag drop-down list and either `VDDK` or `SSH` as the assigned value. See xref:datapath_transformation_options_vddk_ssh[Datapath Transformation Options: VDDK vs. SSH] for more information.
-+
-[NOTE]
-====
-VDDK is approximately twice as fast as SSH.
-====
-
 . Click `Save`.
 . Select the same host, click the `Configuration` drop-down button, and select `Edit this item`.
 . In the `Default` tab of the Endpoints section, enter the `Username` *root* and the password.
@@ -22,7 +14,3 @@ VDDK is approximately twice as fast as SSH.
 
 .Conversion Host Properties
 image:Conversion_host_properties.png[]
-
-If you are using `SSH` transformation, go to xref:Additional_configuration_for_ssh_transformation[].
-
-include::proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc[leveloffset=+1]
