--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -18,31 +18,38 @@ Through the use of catalogs, {product-title} provides support for multi-tier ser
 |====
 
 
-[[dynamic-resource-objects]]
-==== Dynamic Resource Objects
+[[generic-objects]]
+==== Generic Objects
 
-Dynamic resource objects are object-like entities, defined at runtime, that have unique names and user-defined attributes and relationships. Residing in the Automate Engine datastore, dynamic resource objects are designed to manage objects other than those related to private infrastructure, and public or private cloud providers.
+Generic Objects are object-like entities, defined at runtime, that have unique names and user-defined attributes and relationships. Residing in the Automate Engine datastore, generic objects are designed to manage objects other than those related to private infrastructure, and public or private cloud providers.
 
-Using automate requests, services and catalog items, dynamic resource objects can be directly accessed or passed, during any step, as a parameter to a service state machine. As a result, dynamic resource objects can be used to quickly add the capability to provision and collect data on resources not supported by {product-title}.
+Using automate requests, services and catalog items, generic objects can be directly accessed or passed, during any step, as a parameter to a service state machine. As a result, generic objects can be used to quickly add the capability to provision and collect data on resources not supported by {product-title}.
 
-[[view-dynamic-resource-objects]]
-===== View Dynamic Resource Objects Classes
+ifdef::cfme[]
+[NOTE]
+====
+Please note that, outside of the {product-title} user interface, Red Hat Marketing may refer to *Dynamic Resource Objects* when referencing the features and applications of generic objects. 
+====
+endif::cfme[]
 
-View a list of dynamic resource objects and click through to see detailed summary information for each object.
+[[view-generic-objects]]
+===== Viewing Generic Objects Classes
 
-. Navigate to menu:Automate[Dynamic Resource Objects].
-. Click on a dynamic resource object class in the table to view its summary information.
+View a list of generic objects and click through to see detailed summary information for each object.
 
-[[create-dynamic-resource-objects]]
-===== Create Dynamic Resource Objects Classes
+. Navigate to menu:Automate[Generic Objects].
+. Click on a generic object class in the table to view its summary information.
+
+[[create-generic-objects]]
+===== Creating Generic Objects Classes
 include::common/create-dynamic-resource-object.adoc[]
 
-[[edit-dynamic-resource-objects]]
-===== Edit Dynamic Resource Objects Classes
+[[edit-generic-objects]]
+===== Editing Generic Object Classes
 include::common/edit-dynamic-resource-object.adoc[]
 
-[[remove-dynamic-resource-objects]]
-===== Remove Dynamic Resource Objects Classes
+[[remove-generic-objects]]
+===== Removing Generic Objects Classes
 include::common/remove-dynamic-resource-object.adoc[]
 
 [[service-dialogs]]
