add rename vmware vm procedure

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -424,6 +424,22 @@ Virtual machines can be cloned in other providers as well.
 . Schedule the request on the *Schedule* tab.
 . Click *Submit*.
 
+[[renaming-a-provisioned-virtual-machine]]
+==== Renaming a Provisioned Virtual Machine (VMware Virtual Machines Only)
+
+{product-title} allows you to rename a VMware virtual machine without having to reprovision it. 
+
+To rename a VMWare virtual machine:
+
+. Navigate to menu:Compute[Infrastructure > Virtual Machines], and check the VMware virtual machine you want to rename.
+. Click image:1847.png[](*Configuration*), image:1851.png[](*Rename selected item*).
+. In the *Basic Information* screen, provide a new *name*.
+. Click *Save*.
+
+The remaned virtual machine will appear in the inventory view. 
+
+
+
 [[provisioning-instances]]
 === Provisioning Instances
 
