add reset vm feature

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Controlling_Power_State_of_RHV_VMs.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Controlling_Power_State_of_RHV_VMs.adoc
@@ -11,5 +11,8 @@ Follow this procedure to control the power states of Red Hat Virtualization VMs 
 * Click  image:1999.png[] (*Power On*) to power on the VM.
 * Click  image:2000.png[] (*Power Off*) to power off the VM.
 * Click  image:2004.png[] (*Suspend*) to suspend the VM.
+* Click  image:2003.png[] (*Reset*) to reset the VM.
+
+
 
 . Click *OK*.
