revise based on reviewer feedback

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -28,7 +28,7 @@ Using automate requests, services and catalog items, generic objects can be dire
 ifdef::cfme[]
 [NOTE]
 ====
-Please note that, outside of the {product-title} user interface, Red Hat Marketing may refer to *Dynamic Resource Objects* when referencing the features and applications of generic objects. 
+Outside of the {product-title} user interface, Red Hat Marketing may refer to *Dynamic Resource Objects* when referencing the features and applications of generic objects. 
 ====
 endif::cfme[]
 
