--- a/common/create-dynamic-resource-object.adoc
+++ b/common/create-dynamic-resource-object.adoc
@@ -1,5 +1,5 @@
 
-Model a new resource by creating a generic object class and adding it to your {product-title} inventory. Each generic object class can have attributes, associations, and methods. Once created, generic object classes are visible to users of the Service user interface at the resource level.  
+Model a new resource by creating a generic object class and adding it to your {product-title} inventory. Each generic object class can have attributes, associations, and methods. Once created, generic object classes are visible to users of the Self Service user interface at the resource level.  
 
 Create a generic object class using the following steps:
 
