Minor peer review edits
Changed "check" to "select" as per style guide

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -409,7 +409,7 @@ Request 99 in region 123 results in Request ID 123000000000099.
 
 Virtual machines can be cloned in other providers as well.
 
-. Navigate to menu:Compute[Infrastructure > Virtual Machines], and check the virtual machine you want to clone.
+. Navigate to menu:Compute[Infrastructure > Virtual Machines], and select the virtual machine you want to clone.
 . Click image:2007.png[](*Lifecycle*), and then image:2339.png[](*Clone selected item*).
 . Enter the requested information in the dialogs. Be sure to check the *Catalog* tab.
 . Schedule the request on the *Schedule* tab.
@@ -418,7 +418,7 @@ Virtual machines can be cloned in other providers as well.
 [[publishing-a-virtual-machine-to-a-template-vmware]]
 ==== Publishing a Virtual Machine to a Template (VMware Virtual Machines Only)
 
-. Navigate to menu:Compute[Infrastructure > Virtual Machines], and check the virtual machine you want to publish as a template.
+. Navigate to menu:Compute[Infrastructure > Virtual Machines], and select the virtual machine you want to publish as a template.
 . Click image:2007.png[](*Lifecycle*), and then image:2340.png[](*Publish selected VM to a Template*).
 . Enter the requested information in the dialogs. Be sure to check the *Catalog* tab.
 . Schedule the request on the *Schedule* tab.
@@ -431,7 +431,7 @@ Virtual machines can be cloned in other providers as well.
 
 To rename a VMware virtual machine:
 
-. Navigate to menu:Compute[Infrastructure > Virtual Machines], and check the VMware virtual machine you want to rename.
+. Navigate to menu:Compute[Infrastructure > Virtual Machines], and select the VMware virtual machine you want to rename.
 . Click image:1847.png[](*Configuration*), image:1851.png[](*Rename selected item*).
 . In the *Basic Information* screen, provide a new *name*.
 . Click *Save*.
