--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
@@ -5,7 +5,7 @@ The default limit for concurrent migrations is `10` for a conversion host and `1
 
 [IMPORTANT]
 ====
-The maximum number of concurrent virtual machine migrations per conversion host is `10`, for VDDK transformation, and `20`, for SSH transformation.
+The maximum number of concurrent virtual machine migrations per conversion host is `10`, for VDDK transformation, and `20`, for SSH transformation. The SSH transformation limitation applies only to Red Hat Virtualization 4.2.5, not to later versions.
 ====
 
 The following examples show how to set `Max Transformation Runners` using the Rails console on the CloudForms appliance.
