--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
@@ -7,7 +7,7 @@ Each conversion host is limited to `10` concurrent migrations, unless you change
 
 [IMPORTANT]
 ====
-The maximum number of concurrent virtual machine migrations per conversion host is `10`, for VDDK transformation, and `20`, for SSH transformation.
+The maximum number of concurrent virtual machine migrations per conversion host is `10`, for VDDK transformation, and `20`, for SSH transformation. The SSH transformation limitation applies only to Red Hat Virtualization 4.2.5, not to later versions.
 ====
 
 Multiple conversion hosts are recommended, even for smaller migrations, for load-balancing purposes. The number of virtual machines that you can migrate at the same time depends on your infrastructure capabilities. Each migration requires a certain amount of network bandwidth, I/O throughput, and processing power for the conversion process. You should test your environment to understand how many migrations can occur simultaneously without negative effects.
