--- a/common/edit-dynamic-resource-object.adoc
+++ b/common/edit-dynamic-resource-object.adoc
@@ -1,9 +1,8 @@
 
+Edit existing generic object classes using the following steps:
 
-Edit existing dynamic resource objects classes using the following steps:
-
-. Navigate to menu:Automation[Automate > Dynamic Resource Objects].
-. Click on a dynamic resource object class in the list view. 
-. Click image:1847.png[Configuration] (*Configuration*), then click image:1851.png[Edit this Dynamic Resource Object Class] (*Edit this Dynamic Resource Object Class*).
-. Make required changes to the dynamic resource object class fields. 
+. Navigate to menu:Automation[Automate > Generic Objects].
+. Click on a generic object class in the list view. 
+. Click image:1847.png[Configuration] (*Configuration*), then click image:1851.png[Edit this Generic Object Class] (*Edit this Generic Object Class*).
+. Make required changes to the generic object class fields. 
 . Click *Save*.
