revert to generic object ref

--- a/common/remove-dynamic-resource-object.adoc
+++ b/common/remove-dynamic-resource-object.adoc
@@ -1,7 +1,7 @@
 
-Remove dynamic resource objects classes from your inventory using the following steps:
+Remove generic object classes from your inventory using the following steps:
 
-. Navigate to menu:Automation[Automate > Dynamic Resource Objects].
-. Check the dynamic resource objects classes from the table to remove. 
-. Click image:1847.png[Configuration] (*Configuration*), then click image:2098.png[Remove selected Dynamic Resource Object Classes from Inventory] (*Remove selected Dynamic Resource Object Classes from Inventory*).
-. Click *OK* to confirm. 
+. Navigate to menu:Automation[Automate > Generic Objects].
+. Check the generic objects classes from the table to remove. 
+. Click image:1847.png[Configuration] (*Configuration*), then click image:2098.png[Remove selected Generic Object Classes from Inventory] (*Remove selected Generic Object Classes from Inventory*).
+. Click *OK* to confirm.  
