--- a/common/remove-dynamic-resource-object.adoc
+++ b/common/remove-dynamic-resource-object.adoc
@@ -1,5 +1,5 @@
 
-Remove  classes from your inventory using the following steps:
+Remove generic object classes from your inventory using the following steps:
 
 . Navigate to menu:Automation[Automate > Generic Objects].
 . Check the generic objects classes from the table to remove. 
