Note about icon appearance delay

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -9,6 +9,12 @@ In CloudForms, create an infrastructure mapping to map your VMware resources to 
 . Go to menu:Compute[Migration] and click *Create Infrastructure Mapping*.
 . Enter the name of your mapping and click *Next*.
 . Select a source cluster and a target cluster.
++
+[NOTE]
+====
+A target cluster that does not contain a conversion host is marked with a warning icon (&#65279;image:warning.png[height=15px]&#65279;), which appears after a few seconds' delay for polling the clusters and refreshing the UI.
+====
+
 . Click *Add Mapping* and *Next*.
 
 . Map the datastore of each cluster:
