add note with link to RHV procedure

--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -17,6 +17,10 @@ Uploading the {product-title_short} appliance file to Red Hat Virtualization req
 * 12 GB RAM.
 * 4 vCPUs.
 
+[NOTE]
+====
+See https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/virtual_machine_management_guide/chap-installing_linux_virtual_machines#Creating_a_virtual_machine_linux_vm[Creating a Virtual Machine] in the Red Hat Virtualization _Virtual Machine Management Guide_ for information on specifying memory for a new virtual machine.  
+====
 
 ifdef::miq[]
 [[obtaining-the-appliance]]
