--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reconfiguring_VMs.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reconfiguring_VMs.adoc
@@ -1,7 +1,7 @@
 [[Reconfiguring_VMs]]
 = Reconfiguring Virtual Machines
 
-Memory, processors, and disks can be reconfigured on existing VMware and Red Hat Virtualization virtual machines using the *Reconfigure this VM* button.
+Memory, processors, disks and CD/DVD Drives can be reconfigured on existing VMware and Red Hat Virtualization virtual machines using the *Reconfigure this VM* button.
 
 You can reconfigure multiple components on a virtual machine using one request, or make each reconfiguration separately. Confirm your changes using the *Submit* button.
 
