Added note about using a virtual IP
Info from JoeV via email.

--- a/doc-Managing_Authentication/topics/SAML.adoc
+++ b/doc-Managing_Authentication/topics/SAML.adoc
@@ -72,6 +72,12 @@ Other `mod_auth_mellon` parameters, such as endpoints and protected URLs, must n
 +
 The `mellon_create_metadata.sh` script creates file names based on the appliance URL.
 +
+----
+[NOTE]
+If your appliance is behind a load balancer or uses a virtual IP address, use the hostname associated with the VIP. For example:
+`# /usr/libexec/mod_auth_mellon/mellon_create_metadata.sh https://my-haproxy-ka https://my-haproxy-ka/saml2`
+----
++
 . Rename the files created by the `mellon_create_metadata.sh` script to match the expected file names from the `manageiq-external-auth-saml.conf` file:
 +
 ----
