--- a/doc-Managing_Authentication/topics/SAML.adoc
+++ b/doc-Managing_Authentication/topics/SAML.adoc
@@ -1,6 +1,6 @@
 [[SAML]]
 = Configuring Federated Authentication with SAML
-//= External Authentication Using SAML
+//= original title: External Authentication Using SAML
 
 This procedure outlines how to manually configure an appliance to use SAML for federation authentication. 
 
@@ -15,7 +15,7 @@ The current SAML implementation only secures the {product-title_short} appliance
 
 The following is required in order to enable SAML authentication to the appliance:
 
-* A CloudForms 4.7-Beta appliance
+* A {product-title_short} appliance
 * A SAML identity provider (e.g. Red Hat Single Sign-On 7.0 or later)
 
 == Configuring Authentication with SAML and Red Hat Single Sign-On (RH-SSO)
@@ -70,11 +70,11 @@ Other `mod_auth_mellon` parameters, such as endpoints and protected URLs, must n
 +
 The `mellon_create_metadata.sh` script creates file names based on the appliance URL.
 +
-----
 [NOTE]
+====
 If your appliance is behind a load balancer or uses a virtual IP address, use the hostname associated with the VIP. For example:
 `# /usr/libexec/mod_auth_mellon/mellon_create_metadata.sh https://my-haproxy-ka https://my-haproxy-ka/saml2`
-----
+====
 +
 . Rename the files created by the `mellon_create_metadata.sh` script to match the expected file names from the `manageiq-external-auth-saml.conf` file:
 +
@@ -112,7 +112,7 @@ To add a client in the Red Hat SSO {product-title_short} realm:
   http://<redhatSSO-server>:8080/auth/realms/<miq-realm>/protocol/saml/descriptor
 ----
 +
-. In CloudForms 4.7-Beta, the following change is necessary to the `idp-metadata.xml` file for SAML logout to work between `mod_auth_mellon` and Red Hat SSO:
+. In {product-title_short}, the following change is necessary to the `idp-metadata.xml` file for SAML logout to work between `mod_auth_mellon` and Red Hat SSO:
 +
 ----
 # vi idp-metadata.xml
