--- a/common/create-tower-catalog-item.adoc
+++ b/common/create-tower-catalog-item.adoc
@@ -13,7 +13,7 @@ First, create a catalog:
 
 Then, create an Ansible Tower service catalog item:
 
-. Navigate to menu:Automation[Ansible Tower > Explorer], then click on the *Templates* according menu.
+. Navigate to menu:Automation[Ansible Tower > Explorer], then click on the *Templates* accordion menu.
 . Click *Ansible Tower Templates* and select an Ansible Tower job or workflow template.
 . Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Create Service Dialog from Template] (*Create Service Dialog from this Template*).
 . Enter a *Service Dialog Name* (for example, _ansible_tower_job_)and click *Save*.
