add suspend providers overview

--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -117,6 +117,11 @@ include::Viewing_Hosts_and_Clusters.adoc[]
 :leveloffset: 2
 include::Viewing_Virtual_Machines_and_Templates.adoc[]
 
+:leveloffset: 2
+include::Suspending_Providers.adoc[]
+
+
+
 
 
 
