--- a/doc-Appliance_Hardening_Guide/topics/UI_Password.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/UI_Password.adoc
@@ -7,7 +7,7 @@ After installing the appliance, change the default password of the `admin` to re
 ifdef::cfme[]
 [IMPORTANT]
 ====
-{product-title} appliances are designed for 'admin` users with `root` access. Red Hat does not recommend or support configurations with users lacking `root` access.   
+{product-title} appliances are designed for `admin` users with `root` access. Red Hat does not recommend or support {product-title_short} appliance configurations with users lacking `root` access.   
 ====
 endif::cfme[]
 
