Added VMware link for authenticating hosts. Small fix in intro.

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -51,6 +51,8 @@ See   link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/
 RHV hosts authenticated::
 See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[Authenticating Red Hat Virtualization Hosts] in _CloudForms: Managing Providers_.
 
+VMware hosts authenticated::
+See link:https://docs.vmware.com/en/VMware-vSphere/6.5/com.vmware.vsphere.install.doc/GUID-CE128B59-E236-45FF-9976-D134DADC8178.html[Log in to vCenter Server by Using the vSphere Web Client].
+
 RHV conversion hosts created and configured::
 See xref:rhv_conversion_hosts[].
-
