--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
@@ -17,7 +17,7 @@ include::common/attributes/ims.adoc[]
 [[Introduction]]
 == Introduction
 
-{product-title} is Red Hat's solution for moving your virtual machines from VMware to Red Hat Virtualization.
+{product-title} enables you to move your virtual machines from VMware to Red Hat Virtualization.
 
 Red Hat Virtualization (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
