--- a/doc-High_Availability_Guide/topics/Database_Failover.adoc
+++ b/doc-High_Availability_Guide/topics/Database_Failover.adoc
@@ -8,6 +8,21 @@ The failover monitor daemon must run on all of the non-database {product-title_s
 This configuration is crucial for high availability to work in your environment. If the database failover monitor is not configured, the standby database-only appliance will not react and take over operations in case of a primary database failure. 
 ====
 
+=== Failover Configuration Settings
+
+Configuration settings are located in `/var/www/miq/config/ha_admin.yml`. 
+
+Default settings:
+
+[cols="1,1,1", frame="all", options="header"]
+|===
+|Parameter|Default Value|Description|
+`failover_attempts`|10s|The number of times the `failover_monitor` will attempt to failover after discovering the connection to the current database is no longer active.
+|`db_check_frequency`|300s|The sleep interval in the monitor loop and defines how frequently the connection to the database is checked.
+|`failover_check_frequency`|60s|The sleep interval between attempting to failover additional times.
+|===
+ 
+
 [[failover_monitor]]
 === Configuring the Failover Monitor
 
