add new retire procedure

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
@@ -46,7 +46,7 @@ image:2138.png[]
 image:2139.png[]
 |
 
-								Retired: When a virtual machine or instance is no longer required, it can be retired. Once a virtual machine or instance reaches its retirement date, it is immediately shut down and not allowed to restart. If an attempt to restart is made, {product-title} will shut down the virtual machine or instance.
+								Retired: When a virtual machine or instance is no longer required, it can be retired. Once a virtual machine or instance reaches its retirement date and time, it is immediately shut down and not allowed to restart. If an attempt to restart is made, {product-title} will shut down the virtual machine or instance.
 
 |
 image:2140.png[]
@@ -333,6 +333,9 @@ include::Snapshots.adoc[]
 
 :leveloffset: 2
 include::create-template-based-on-vm.adoc[]
+
+:leveloffset: 2
+include::Retiring_Virtual_Machines.adoc[]
 
 
 
