update all retirement mentions to include time

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Instance_or_Image_Summary.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Instance_or_Image_Summary.adoc
@@ -10,7 +10,7 @@ The summary page contains the following categories:
   Some categories can be clicked on for additional detail.
   For example, click *Container* to view notes associated with an instance. 
 * *Lifecycle* shows the date of discovery and the last analysis.
-  If a retirement date or owner has been set, these display as well. 
+  If a retirement date and time or owner has been set, these display as well. 
 * *Relationships* include information on the instance's cloud provider, genealogy such as parent and child instances, and drift. 
 * *VMsafe* shows properties of the VMsafe agent if it is enabled. 
 * *Compliance* shows the status of system compliance checks and history of past checks. 
