--- a/doc-Managing_Infrastructure_and_Inventory/topics/Retiring_Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Retiring_Virtual_Machines.adoc
@@ -1,4 +1,4 @@
-= Setting Retirement Date and Time for Virtual Machines or Instances
+= Retiring Virtual Machines
 
 Specify a retirement date and time for virtual machines or instances using {product-title}.
 
