--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machine_or_Template_Summary.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machine_or_Template_Summary.adoc
@@ -17,7 +17,7 @@ When you perform a SmartState Analysis on a virtual machine or template, you get
 image:2167.png[]
 
 * *Lifecycle* shows the date of discovery and the last analysis.
-  If a retirement date or owner has been set, these display as well. 
+  If a retirement date and time or owner has been set, these display as well. 
 +
 
 image:2168.png[]
