--- a/doc-Managing_Infrastructure_and_Inventory/topics/Retiring_Orchestration_Stacks.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Retiring_Orchestration_Stacks.adoc
@@ -1,13 +1,13 @@
 = Retiring Orchestration Stacks
 
-You can either retire orchestration stacks on a set date, or retire them immediately. 
+You can either retire orchestration stacks on a set date and time, or retire them immediately. 
 
 To set a retirement date:
 
 . Navigate to menu:Compute[Clouds > Stacks]. 
-. Select the orchestration stacks to retire on a set date. 
+. Select the orchestration stacks to retire on a set date and time. 
 . Click  image:2007.png[](*Lifecycle*), and then image:retirement.png[Set Retirement Dates] (*Set Retirement Dates*). 
-. On the *Retire Orchestration Stacks* page, set *Retirement Date*.
+. On the *Retire Orchestration Stacks* page, set *Retirement Date and Time*.
 . Select *Retirement Warning* from the list. The default is _None_.
 . Click *Save*.
 
