--- a/doc-Managing_Infrastructure_and_Inventory/topics/Retiring_Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Retiring_Virtual_Machines.adoc
@@ -2,7 +2,7 @@
 
 Specify a retirement date and time for virtual machines or instances using {product-title}.
 
-To set retirement date of time:
+To set retirement date and time:
 
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Select the virtual machines or instances for retirement. 
