--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -46,12 +46,21 @@ To upload the {product-title} appliance file in Microsoft Azure, ensure the foll
 * Administrator access to the Azure portal.
 * Depending on your infrastructure, allow time for the upload.
 
-
+ifdef::cfme[]
 [IMPORTANT]
 ====
-Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The Azure PowerShell script and Azure CLI do not automatically convert a dynamic .vhd file to fixed during upload. For {product-title_short} 4.5.2 and newer, the virtual appliance image files (`cfme-azure-5.8.2.3-1.x86_64.vhd` and newer) are available for download in a fixed format and therefore can be uploaded and provisioned in an Azure environment without requiring any additional manipulations with the image.   
+Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The Azure PowerShell script and Azure CLI do not automatically convert a dynamic VHD file to fixed during upload. For {product-title_short} 4.5.2 and newer, the virtual appliance image files (`cfme-azure-5.8.2.3-1.x86_64.vhd` and newer) are available for download in a fixed format and therefore can be uploaded and provisioned in an Azure environment without requiring any additional manipulations with the image.   
+====
+endif::cfme[]
+
+ifdef::miq[]
+[IMPORTANT]
+====
+Azure requires that the uploaded Virtual Hard Disk (VHD) files are in a fixed format. The {product-title_short} virtual appliance image VHD file is dynamic by default. Currently, the Azure Powershell script and Azure CLI do not automatically convert the dynamic VHD file to fixed during upload. To upload using either method, the {product-title_short} virtual appliance image VHD file must be first converted from dynamic to fixed, and properly aligned to the nearest 1 MB boundary. Once converted and properly aligned, you can then upload the appliance virtual image VHD file using either the Azure PowerShell or Azure CLI method.
 ====
 
+include::converting-aligning-cfme-appliance-image.adoc[]
+endif::miq[]
 
 [[uploading-the-appliance-using-azure-powershell-script]]
 ==== Using the Azure PowerShell Script
@@ -73,7 +82,7 @@ Select-AzureRmSubscription -SubscriptionName $SubscriptionName
 +  
 When prompted, enter your user name and password for the Azure Portal.
 
-. Upload the .vhd file to a storage account. As shown in the example script below, you will first create a *Resource Group* through the Portal UI or PowerShell. Additionally, create the storage container defined in "BlobDestinationContainer" in advance.
+. Upload the VHD file to a storage account. As shown in the example script below, you will first create a *Resource Group* through the Portal UI or PowerShell. Additionally, create the storage container defined in "BlobDestinationContainer" in advance.
 +
 ------
 Example Script:
@@ -404,7 +413,7 @@ $ az storage blob upload --account-name azrhelclistact --container-name azrhelcl
 Finished[#############################################################]  100.0000%
 ----
 +
-. Get the URL for the uploaded .vhd file using the following command. You will need to use this URL in the next step.
+. Get the URL for the uploaded VHD file using the following command. You will need to use this URL in the next step.
 +
 ----
 $ az storage blob url -c <container-name> -n <image-name>.vhd
@@ -506,10 +515,12 @@ $ export AZURE_STORAGE_CONNECTION_STRING="DefaultEndpointsProtocol=https;Endpoin
 
 * For information about Azure ports used by {product-title_short}, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/appliance_hardening_guide/#chap_red_hat_cloudforms_security_guide_firewall[].
 
-
+ifdef::cfme[]
 [IMPORTANT]
 ====
 After uploading the {product-title} appliance, you must configure the database for {product-title_short}; see xref:configuring_a_database[Configuring a Database for {product-title}].
 ====
+endif::cfme[]
+
 
 
